# twitter-automation-bot

./: .gitignore  README.md  folder_structure.txt  pyproject.toml
app/: main.py
app/config/: settings.py
app/db/: article_repository.py  connection.py  raw_articles_repository.py  tweet_repository.py
app/exports/: export_tweets_to_excel.py
app/generation/: prompt_template.py  tweet_generation_pipeline.py  tweet_generator.py
app/ingestion/: article_transformer.py  ingestion_pipeline.py  piepeline.py  raw_article_loader.py  rss_fetcher.py  scraper.py
app/llm/: prompt_template.py  tweet_generator.py
app/models/: article.py  raw_article.py  story_cluster.py  tweet.py
app/posting/: post_tweet.py  threads_poster.py  threads_posting_pipeline.py
app/processing/: article_builder_pipeline.py  article_transformer.py  clusterer.py  clustering.py  embedder.py  representative_selector.py  scraper.py  selector.py
app/utils/: logger.py
