[project]
name = "twitter-automation-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "isort>=8.0.1",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "lxml-html-clean>=0.4.4",
    "newspaper3k>=0.2.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "scrapy>=2.14.2",
    "sentence-transformers>=5.3.0",
    "tweepy>=4.16.0",
]
